# LibappindicatorRs

./: CHANGELOG.md  Cargo.toml  DEPENDENTS.md  LICENSE  README.md
.changes/: config.json
Source/: lib.rs
examples/: hello.rs
sys/: CHANGELOG.md  Cargo.toml
sys/Source/: lib.rs
