[dependencies]
gtk = { version = "0.18" }
libappindicator-sys = { version = "0.9", path = "sys/" }
log = { version = "0.4" }

[features]
backcompat = ["libappindicator-sys/backcompat"]
default = ["backcompat"]

[lib]
path = "Source/lib.rs"

[package]
description = "Rust safe bindings for libappindicator"
edition = "2024"
keywords = ["linux", "gui", "gtk"]
license-file = "LICENSE"
name = "libappindicator"
version = "0.9.0"
