[package]
name = "libappindicator-sys"
version = "0.9.0"
description = "Rust sys bindings for libappindicator"
license-file = "LICENSE"
keywords = ["linux", "gui"]
edition = "2018"
categories = ["external-ffi-bindings"]

[dependencies]
gtk-sys = "0.18"
libloading = { version = "0.7" }
once_cell = { version = "1.12" }

[features]
default = ["backcompat"]
backcompat = []
