[dependencies]
gtk-sys = "0.18"
libloading = "0.7"
once_cell = "1.12"

[features]
backcompat = [ ]
default = [ "backcompat" ]

[lib]
path = "Source/lib.rs"

[package]
categories = [ "external-ffi-bindings" ]
description = "Rust sys bindings for libappindicator"
edition = "2018"
keywords = [ "linux", "gui" ]
license-file = "LICENSE"
name = "libappindicator-sys"
version = "0.9.0"
